Product page spacing + form fixes

--- a/source/stylesheets/home.css.sass
+++ b/source/stylesheets/home.css.sass
@@ -6,22 +6,24 @@
 .slideshow
   border: $border
   margin: 0 auto 50px
-  max-height: 850px
   max-width: 1350px
+  min-height: 850px
   overflow: hidden
   position: relative
   width: 100%
 
-  @media screen and (max-width: $break-large)
-    max-height: 650px
-
   @media screen and (max-width: $break-medium)
     margin-bottom: $marginSize/2
-    min-height: 450px
+    margin-top: 88px
+    min-height: 650px
 
   @media screen and (max-width: $break-small)
     border-top: 0
     margin-bottom: 0
+
+  .flickity-page-dots
+    bottom: 20px
+    z-index: 100
 
   .welcome
     +transform(translateY(-50%) translateX(-50%))
@@ -31,17 +33,26 @@
     text-align: center
     top: 50%
     z-index: 2
+    width: 75%
 
     p.subheader
       font-size: 22px
       line-height: 30px
       margin: 0 0 $marginSize/2 0
 
+      @media screen and (max-width: $break-small)
+        font-size: 16px
+        line-height: 22px
+
     h2.headline
       color: $background-color
       font-size: 48px
       line-height: 60px
       margin: 0 0 $marginSize/2 0
+
+      @media screen and (max-width: $break-small)
+        font-size: 32px
+        line-height: 40px
 
     .button
       font-size: 16px
@@ -58,12 +69,20 @@
     width: 100%
     z-index: 1
 
+    &.texture
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='#{"{{ theme.pattern_color | replace: '#', '%23' }}"}' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E")
+
     &.diagonal-lines
       background-image: url("data:image/svg+xml,%3Csvg width='4' height='4' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='#{"{{ theme.pattern_color | replace: '#', '%23' }}"}' fill-opacity='0.7' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E")
 
     &.bank-note
       background-image: url("data:image/svg+xml,%3Csvg width='50' height='10' viewBox='0 0 100 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M21.184 20c.357-.13.72-.264 1.088-.402l1.768-.661C33.64 15.347 39.647 14 50 14c10.271 0 15.362 1.222 24.629 4.928.955.383 1.869.74 2.75 1.072h6.225c-2.51-.73-5.139-1.691-8.233-2.928C65.888 13.278 60.562 12 50 12c-10.626 0-16.855 1.397-26.66 5.063l-1.767.662c-2.475.923-4.66 1.674-6.724 2.275h6.335zm0-20C13.258 2.892 8.077 4 0 4V2c5.744 0 9.951-.574 14.85-2h6.334zM77.38 0C85.239 2.966 90.502 4 100 4V2c-6.842 0-11.386-.542-16.396-2h-6.225zM0 14c8.44 0 13.718-1.21 22.272-4.402l1.768-.661C33.64 5.347 39.647 4 50 4c10.271 0 15.362 1.222 24.629 4.928C84.112 12.722 89.438 14 100 14v-2c-10.271 0-15.362-1.222-24.629-4.928C65.888 3.278 60.562 2 50 2 39.374 2 33.145 3.397 23.34 7.063l-1.767.662C13.223 10.84 8.163 12 0 12v2z' fill='#{"{{ theme.pattern_color | replace: '#', '%23' }}"}' fill-opacity='0.7' fill-rule='evenodd'/%3E%3C/svg%3E")
 
+    &.hideout
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='#{"{{ theme.pattern_color | replace: '#', '%23' }}"}' fill-opacity='0.4'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
+
+    &.polka-dots
+      background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='#{"{{ theme.pattern_color | replace: '#', '%23' }}"}' fill-opacity='0.4' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E")
   img
     display: block
     object-fit: cover
@@ -131,6 +150,10 @@ h1.featured-title
     text-align: center
     top: -26px
     z-index: 1
+    width: 75%
+
+    @media screen and (max-width: $break-medium)
+
 
     img
       display: block
@@ -145,6 +168,10 @@ h1.featured-title
     position: absolute
     width: 304px
     z-index: 1
+
+    @media screen and (max-width: $break-medium)
+      height: 150px
+      width: 150px
 
     &:nth-child(2)
       left: 24px
